--- a/awwards/templates/register.html
+++ b/awwards/templates/register.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
+
 {% block content %}
 
 <div class="container">
-    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-        {{ form | crispy }}
-        <input type="submit" value="Register" class="btn btn-md btn-info">
-    </form>
+    <h1>Profile:  {{ username | upper }}</h1>
+    <h1>{{ user.username }}</h1>
+    {% for i in reviews %}
+        <h3>{{ i.project.title }}</h3>
+        <p>{{ i.review }}</p>
+        <h6>Rating: {{ i.rating }}</h6>
+        <hr style="color:white;">
+    {% endfor %}
 </div>
 
 {% endblock %}
