--- a/awwards/templates/base.html
+++ b/awwards/templates/base.html
@@ -1,69 +1,151 @@
-
-<!-- this is going to be the base for all other templates -->
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ProjectReview</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>AWWARDS</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="icon" href="" type="image/ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet"><br />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-    <!-- bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+<style>
+    body {
+        padding: 0;
+        margin: 0;
+        height: 100vh;
+        width: 100%;
+        background: transparent;
+    }
 
-    <!-- static files -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
+    form{
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        transition: all 1s;
+        width: 50px;
+        height: 50px;
+        background: white;
+        box-sizing: border-box;
+        border-radius: 25px;
+        border: 4px solid white;
+        padding: 5px;
+    }
+
+    input{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;;
+        height: 42.5px;
+        line-height: 30px;
+        outline: 0;
+        border: 0;
+        display: none;
+        font-size: 1em;
+        border-radius: 20px;
+        padding: 0 20px;
+    }
+
+    .fa{
+        box-sizing: border-box;
+        padding: 10px;
+        width: 42.5px;
+        height: 42.5px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-radius: 50%;
+        color: #7dd1f1;
+        text-align: center;
+        font-size: 1.2em;
+        transition: all 1s;
+    }
+
+    form:hover{
+        width: 200px;
+        cursor: pointer;
+    }
+
+    form:hover input{
+        display: block;
+    }
+
+    form:hover .fa{
+    background: #7dd1f1;
+    color: white;
+    }
+</style>
 <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:rgb(14, 14, 14);">
-      <div class="container">
-          <a class="navbar-brand text-white" href="/" id="brand">Project<span style="color:steelblue;">Review</span></a>
-          <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="nav navbar-nav ml-auto w-100 justify-content-end" id="item">
-                {% if not request.user.is_authenticated %}
-                  <li class="nav-item active">
-                      <a class="nav-link text-white" href="{% url 'register' %}">Register
-                          <span class="sr-only">(current)</span>
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-white" href="{% url 'login_user' %}">Login</a>
-                  </li>
-                  {% else %}
-                  <li class="nav-item active">
-                      <a class="nav-link text-white" href="{% url 'profile' user.username %}">{{user.username}}
-                          <span class="sr-only">(current)</span>
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-white" href="{% url 'logout_user'  %}">Logout</a>
-                  </li>
-                  {% endif %}
-                  <div>
-                      <!--this is the input for the search-->
-                      <form class="form-inline my-2 my-lg-0" method="GET" action="#" id="search">
-                          <input class="form-control mr-sm-2" type="text" name='q' value="" placeholder="Search Movies">
-                          <input class="btn btn-outline-info my-2 my-sm-0" type="submit" value="Search"></input>
-                      </form>
-                      <!--end of input-->
-                  </div>
-              </ul>
-          </div>
-      </div>
-  </nav>
-<!-- contents are displayed between navbar and footer -->
-{% block content %}
+	<header class="cd-header">
+		<div class="header-wrapper">
+			<div class="logo-wrap">
+				<a href="#" class="hover-target"><span>AWW</span>ARDS</a>
+			</div>
+			<div class="nav-but-wrap">
+				<div class="menu-icon hover-target">
+					<span class="menu-icon__line menu-icon__line-left"></span>
+					<span class="menu-icon__line"></span>
+					<span class="menu-icon__line menu-icon__line-right"></span>
+				</div>					
+			</div>					
+		</div>				
+	</header>
 
+	<div class="nav">
+		<div class="nav__content">
+			<ul class="nav__list">
+				<li class="nav__list-item active-nav"><a href="{% url 'home' %}" class="hover-target">HOME</a></li>
+        <li class="nav__list-item"><a href="{% url 'profile' username=user %}"  class="hover-target">PROFILE</a></li>
+        {% if user.is_authenticated %}
+        <li class="nav__list-item"><a href="/accounts/login/" class="hover-target">LOG OUT</a></li>
+        <li class="nav__list-item"><a href="{% url 'uploadproject' %}" class="hover-target">SUBMIT SITE</a></li>
+        {% else %}
+        <li class="nav__list-item"><a href="accounts/login/" class="hover-target">LOG IN</a></li>
+        {% endif %}
+				<li class="nav__list-item"><a href="#" data-toggle="modal" data-target="#modalSubscriptionForm" class="hover-target">SUBSCRIBE</a></li>
+        
+       <form action="{% url 'search_results' %}" role="search" >
+          <input type="search" class="text-dark">
+          <i class="fa fa-search"></i>
+        </form>
+        <br>
+      </ul>
+		</div>
+	</div>		
+		
+	<div class='cursor' id="cursor"></div>
+	<div class='cursor2' id="cursor2"></div>
+  <div class='cursor3' id="cursor3"></div>
+<br><br><br><br>
+  <div class="card text-lg" style="background-color: transparent;font-size: 30px; ">
+    <div class="card-header text-center text-info" style="outline: double;">
+     AWWARDS
+    </div>
+    <div class="card-body text-lg">
+      <blockquote class="blockquote mb-0 text-lg text-center">
+        <p style="font-size: 30px;" class="text-center">Discover the best project designs drafted by Python-Django platform.</p>
+        <footer class="blockquote-footer teal-text"> <cite title="Source Title">B.O.Mairura</cite></footer>
+        <p style="font-size: 30px;" class="text-center">Coding is a journey....it takes one step at a time.</p>
+      </blockquote>
+    </div>
+  </div>
 
-{% endblock %}
-<!-- here goes the footer -->
-<footer>Copyright, All Rights Reserved</footer>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- bootstrap cdn javascript -->
+{% block content %}{% include "navbar.html" %}{% endblock %}
 </body>
 </html>
+
+  
