fix project uplaod form issues

--- a/awwards/templates/uploads.html
+++ b/awwards/templates/uploads.html
@@ -12,7 +12,7 @@
         <div class="card card-cascade  wider text-center">
             <div class="card-body card-body-cascade ">
                 <h1 class="  text-center blue-text" style="font-family: 'Lobster Two', cursive;">
-                    | Upload Site |</h1> <br>
+                    Add Project</h1> <br>
                     <hr style="background-color: turquoise;">
                 <br>
                 <form action="{% url 'uploadproject' % }" method="POST" style="color: black; background:transparent" enctype="multipart/form-data">
