--- a/awwards/templates/details.html
+++ b/awwards/templates/details.html
@@ -60,22 +60,9 @@
     {%for project in projects%}
     <div class="col-md-8">
       <br>
-      <p class="head">{{project.description}}</p>
+      <p class="head">{{project.body}}</p>
       <div class="overl">
-          <button class="btn btn-outline-dark" type="button" name="button">Jquery</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Css3</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Javascript</button>
-          <button class="btn btn-outline-dark" type="button" name="button">UI</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Material Design</button><br>
-          <button class="btn btn-outline-dark" type="button" name="button">Bootstrap</button>
-          <button class="btn btn-outline-dark" type="button" name="button">SweetAlert</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Bootstrap</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Touch</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Design</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Animation</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Machine AI</button>
-          <button class="btn btn-outline-dark" type="button" name="button">Graphics</button>
-
+      
       </div>
       <br>
 
