--- a/awwards/templates/profile.html
+++ b/awwards/templates/profile.html
@@ -134,14 +134,14 @@
     </div>
 </div>
 </div>
-<script src="{% static 'js/layout.js' %}"></script>
+<script src="{% static 'js/base.js' %}"></script>
 {% block scripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/js/mdb.min.js"></script>
 <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="{% static 'js/layout.js' %}"></script> 
+<script src="{% static 'js/base.js' %}"></script> 
 <script>
         (function($) { "use strict";
                 
