--- a/awwards/templates/base.html
+++ b/awwards/templates/base.html
@@ -1,3 +1,4 @@
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -143,8 +144,21 @@
       </blockquote>
     </div>
   </div>
+  {% block content %}
+  {% include "navbar.html" %}
+  {% endblock %}
 
-{% block content %}{% include "navbar.html" %}{% endblock %}
+  {% block scripts %}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/js/mdb.min.js"></script>
+  <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="{% static 'js/base.js' %}"></script> 
+
+
+  {% endblock %}
 </body>
 </html>
 
