--- a/awwards/templates/search.html
+++ b/awwards/templates/search.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'django_registration/base.html' %}
 {% block content %}
 <div class="container-fluid"><br><br>
  
