--- a/awwards/templates/post.html
+++ b/awwards/templates/post.html
@@ -112,7 +112,7 @@
                                         <th class="text-info">Voters</th>
                                         <th class="text-info">Rating</th>
                                         {%for you in all%}<tr>
-                                                <td> <img src="{{you.user.profile.image.url}}" alt="" width='30px' height="30px">  {{you.user}}</td>
+                                                <td> <img src="{{you.user.user.image.url}}" alt="" width='30px' height="30px">  {{you.user}}</td>
                                                 <td>
                                                         <div class="design">
                                                                 <a href="" class="scores text-success">| DESIGN:{{you.design}}.0</a>
