--- a/awwards/templates/base.html
+++ b/awwards/templates/base.html
@@ -23,7 +23,7 @@
 
   </head>
 <style>
-    body {
+    /* body {
         padding: 0;
         margin: 0;
         height: 100vh;
@@ -59,7 +59,7 @@
         font-size: 1em;
         border-radius: 20px;
         padding: 0 20px;
-    }
+    } 
 
     .fa{
         box-sizing: border-box;
@@ -88,7 +88,7 @@
     form:hover .fa{
     background: #7dd1f1;
     color: white;
-    }
+    }*/
 </style>
 <body>
 	<header class="cd-header">
