--- a/awwards/templates/django_registration/registration_form.html
+++ b/awwards/templates/django_registration/registration_form.html
@@ -23,7 +23,7 @@
               <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
             </div>
 
-            <input type="hidden" name="next" value="{{next}}">
+            <p>Already have an account. <a href="/accounts/login">Log In</a></p>
 
           </form>
 
